CAL-335 Updating pipeline to support multi-branch jobs (#363)
* CAL-335 Updating pipeline to support multi-branch jobs
  * Updated maven memory options
  * Added property to override random device on linux
  * Made deploy step conditional
  * Made coverity step conditional
  * Made Incremental vs Full build conditional
  * Set git longpath support on windows

* CAL-335 Updated indentations, updated maven options, updated coverity conditions

* CAL-335 Stopped redirecting itest output to file

* CAL-335 Added cron restriction to master branch, downgraded maven and java on linux builds